<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:title="@string/settings">   
    <PreferenceCategory 
        android:title="@string/auto_silence_title"> 
        <ListPreference 
            android:key="auto_silence"
            android:title="@string/auto_silence_title"
            android:entries="@array/auto_silence_entries"
            android:entryValues="@array/auto_silence_values"
            android:defaultValue="10"
            android:dialogTitle="@string/auto_silence_title"/>
        
        <com.flyscale.alarms.widget.SnoozeLengthDialog
            android:key="snooze_duration"
            android:title="@string/snooze_duration_title"
            android:defaultValue="10" />
        
        <ListPreference 
            android:key="volume_button_settings"
            android:title="@string/volume_button_setting_title"
            android:dialogTitle="@string/volume_button_setting_title"
            android:entries="@array/volume_button_setting_entries"
            android:entryValues="@array/volume_button_setting_values"
            android:defaultValue="0"/>
     
    </PreferenceCategory>
</PreferenceScreen>