<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextStyle"
        android:text="@string/action_clock_alarm"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="5px"
        android:layout_marginTop="25px">

        <TextView
            android:id="@+id/one_clock_alarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            style="@style/TextStyle"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="14px"
        android:background="#fff"
        android:layout_alignParentBottom="true">
        <TextView
            android:id="@+id/ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:textColor="#000"
            android:paddingLeft="2px"
            android:layout_alignParentLeft="true"
            android:textSize="@dimen/textsize"
            />

        <TextView
            android:id="@+id/no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/back"
            android:textColor="#000"
            android:background="@null"
            android:textSize="@dimen/textsize"/>
    </RelativeLayout>

</RelativeLayout>